# clearsig

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
clearsig/: __init__.py  __main__.py  _abi.py  _calldata_digest.py  _descriptor_hash.py  _eip712.py  _formatter.py  _fourbyte.py  _generate.py  _registry.py  _safe_hash.py  _sourcify.py  _validate.py  cli.py
erc7730/: __init__.py  __main__.py  _abi.py  _formatter.py  _models.py  _registry.py  cli.py
examples/: eip712_mail.json
scripts/: release.sh  update_changelog.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/fixtures/: generate_parity_vectors.mjs  parity_vectors.json
tests/unit/: test_abi.py  test_calldata_digest.py  test_descriptor_hash.py  test_eip712.py  test_formatter.py  test_fourbyte.py  test_generate.py  test_parity.py  test_registry.py  test_safe_hash.py  test_sourcify.py  test_translate.py  test_validate.py
