[project]
name = "clearsig"
version = "0.3.0"
description = "Convert EVM calldata to human-readable output using ERC-7730 descriptors"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Patrick Collins", email = "54278053+PatrickAlphaC@users.noreply.github.com" },
]
keywords = ["ethereum", "evm", "calldata", "erc-7730", "clear-signing", "abi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "eth-abi>=5.0.0",
    "eth-hash[pycryptodome]>=0.7.0",
    "rfc8785>=0.1.4",
]

[project.urls]
Homepage = "https://github.com/Cyfrin/clearsig"
Repository = "https://github.com/Cyfrin/clearsig"
Issues = "https://github.com/Cyfrin/clearsig/issues"

[project.scripts]
clearsig = "clearsig.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clearsig"]

[tool.uv]
# Reject packages published within the last 14 days. Defends against
# compromised-release attacks (e.g. elementary-data Apr 2026) by giving the
# community time to detect and yank a malicious upload before we pull it in.
exclude-newer = "14 days"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that make external API calls"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TC"]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.12", "ty>=0.0.33"]
